# final-project-level3-nlp-19

./: .gitignore  README.md  question.db  requirements.txt
.ipynb_checkpoints/: experiment-checkpoint.ipynb  preprocess-checkpoint.py
ai_scrap/: database.py  main.py  models.py  schemas.py
ai_scrap/router/: __init__.py  aiscrap.py  home.py
ai_scrap/routers/: __init__.py  aiscrap.py  home.py
app/: __main__.py  arguments.py  configure.py  database.py  main.py  postprocessing.py  predict.py  preprocess.py  run_mrc.py  run_retrieval.py  schemas.py  sparse_retrieval.py  tables.py  trainer_qa.py  utils.py  utils_qa.py
app/routers/: article.py
board/: board.py  index_settings.py  pyproject.toml
code/: .sql_app.db  02_elastic.ipynb  AIPaperboy.py  CustomKoBigbird.py  EDA.ipynb  Elasticsearch로 CRUD 구현하기.ipynb  Untitled.ipynb  arguments.py  configure.py  configure_copy.py  csv2arrow.ipynb  dd.sh  dense_retrieval.py  dep.sh  dpr_train_generate.py  experiment.py  hyp.yaml  inference.py  inference_copy.py  inference_news.py  load_data.py  load_test.py  make_mbn_news_wiki.ipynb  make_news_wiki.ipynb  mrc_metrics.py  news_preprocessing.py  post_processing.py  postprocessing.py  predict.py  preprocess.py  prototype.py  prototype_predict.py  pyproject.toml  retrieval_common_part.py  run_mrc.py  sparse_retrieval.py  sql_app.db  testtt.py  train.py  train_copy.py  (+6 more)
outputs/: nbest_predictions.json  predictions.json
scrap_app_by/: pyproject.toml
scrap_app_by/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
serving/: AIPaperboy.py  pyproject.toml
(+91 files in other folders)
